<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSQuickReply</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="later">Later</string>
    <string name="call">Call</string>
    <string name="open">Open</string>
    <string name="reply">Reply</string>
    <string name="message_placeholder">Good morning!</string>
    <string name="close">Close</string>
    <string name="sender_placeholder">Danielle</string>
    <string name="response_placeholder">Response message</string>

</resources>
